post title spacing fix

--- a/css/extra.css
+++ b/css/extra.css
@@ -66,7 +66,6 @@
     justify-content: center;
     align-items: center;
     text-align: center;
-    min-height: 100vh;
 }
 
 .menu-text {
